--- a/assets/cv.css
+++ b/assets/cv.css
@@ -22,6 +22,7 @@ p { font-size: 15px; margin: 0;}
     padding: 2rem 5rem;
     display: flex;
     gap: 20px;
+    margin-top: 20px;
 }
 
 .left, .right {
@@ -68,6 +69,10 @@ p { font-size: 15px; margin: 0;}
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
+.search-alternance-small {
+    display: none;
+}
+
 /* Profil */
 .flex {
     display: flex;
@@ -108,6 +113,14 @@ p { font-size: 15px; margin: 0;}
 
 /* Titre recherche Alt */
 #typewriter {
+    overflow: hidden;
+    border-right: .15em solid rgb(111, 132, 216);
+    animation:
+        typing 3.5s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
+
+#typewriterMobile {
     overflow: hidden;
     border-right: .15em solid rgb(111, 132, 216);
     animation:
@@ -244,7 +257,7 @@ p { font-size: 15px; margin: 0;}
 
 .dateBg1 {
     background-color: rgb(2, 2, 20);
-    padding: 10px;
+    padding: 5px 10px;
     border-radius: 5px;
     width: 80px;
     text-align: center;
@@ -289,7 +302,84 @@ p { font-size: 15px; margin: 0;}
 }
 
 /* Responsive Media Queries */
-@media (max-width: 768px) {
+
+@media (max-width: 480px) {
+    .fullPage {
+        padding: 20px;
+    }
+
+    .social-icon {
+        font-size: 25px;
+    }
+
+    .bg-bloc-color {
+        padding: 20px;
+    }
+
+    .bg-bloc-color.bloc2.custom-txt {
+        margin-top: 0;
+    }
+
+    .mr-3.marginCustomMob {
+        margin-right: 0px;
+    }
+
+    .bg-bloc-color.customMobXp, .bg-bloc-color.customFormMob {
+        padding: 30px 35px 20px 35px;
+    }
+
+    .accordion-header-exp, .accordion-header-form {
+        margin-top: 0px;
+        margin-bottom: 15px;
+    }
+
+    .content-formation {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .formation-details {
+        padding-top: 0px;
+        margin-bottom: 15px;
+    }
+
+    .icon-lang-container {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 700px) {
+    .timeline {
+        display: flex; 
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+
+    .dates {
+        display: flex; 
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        gap: 10px;
+        padding-right: 0px;
+        border-bottom: 2px solid #cccccc6f;
+    }
+
+    .accordion-content-exp {
+        margin: 0px;
+    }
+
+    .contents {
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+
+    .content {
+        width: 100%;
+    }
+}
+
+@media (max-width: 880px) {
     .fullPage {
         flex-direction: column;
         padding: 1rem 2rem;
@@ -304,12 +394,16 @@ p { font-size: 15px; margin: 0;}
         gap: 10px;
     }
 
-    .icon-lang-container {
-        flex-direction: column;
-    }
+    
 
     .txt-right h1, .custom-txt {
         font-size: 30px;
+    }
+
+    .custom-txt {
+        font-size: 35px;
+        margin: 0px;
+        margin-bottom: 30px;
     }
 
     .social-icon {
@@ -319,36 +413,33 @@ p { font-size: 15px; margin: 0;}
     .mode-switch {
         padding: 5px 8px;
     }
+
+    .search-alternance-large {
+        display: none;
+    }
+
+    .search-alternance-small {
+        display: block;
+        margin-bottom:0;
+    }
+
+    .bloc1 {
+        display:none;
+    }
+
+    .bg-bloc-color.bloc2, .bg-bloc-color.customMobile {
+        padding: 30px 35px 20px 35px;
+    }
+
+    .custom-txt-mob {
+        font-size: 25px;
+        margin-top: 10px;
+        margin-bottom: 0px;    
+    }
+
+    .iconCustMob {
+        margin-top: 10px;
+    }
 }
 
-@media (max-width: 480px) {
-    .fullPage {
-        padding: 1rem;
-    }
 
-    .top-bar {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .txt-right h1, .custom-txt {
-        font-size: 25px;
-    }
-
-    .social-icon {
-        font-size: 25px;
-    }
-
-    .mode-switch {
-        padding: 5px 8px;
-        width: 100%;
-    }
-
-    .contact-details p {
-        font-size: 12px;
-    }
-
-    .bg-bloc-color {
-        padding: 20px;
-    }
-}
