--- a/assets/cv.css
+++ b/assets/cv.css
@@ -94,8 +94,9 @@ p { font-size: 15px; margin: 0;}
     margin-bottom: 20px;
 }
 
-.customColor {
-   color: white;
+p.customColor {
+    color: white;
+    text-decoration: none;
 }
 
 .contact-details i {
