--- a/assets/projets.css
+++ b/assets/projets.css
@@ -49,7 +49,7 @@ html body {
 }
 
 @media (max-width: 992px) {
-    .logo {
+    .logo, .logo2 {
         width: 200px;
     }
 
@@ -68,7 +68,7 @@ html body {
 }
 
 @media (max-width: 790px) {
-    .logo {
+    .logo, .logo2 {
         width: 150px;
     }
 
@@ -82,7 +82,7 @@ html body {
 }
 
 @media (max-width: 576px) {
-    .logo {
+    .logo, .logo2 {
         width: 130px;
     }
 
@@ -112,7 +112,7 @@ html body {
 }
 
 @media (max-width: 385px) {
-    .logo {
+    .logo, .logo2 {
         width: 110px;
     }
     
